data/derived/comb/progs/unify/prog5069.ml.out
Characters 121-135:
  if k = 0 then k + mulByDigit i t else [x]@ k + mulByDigit i t;;
                    ^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
